--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 
-MONGO_URI = mongodb+srv://maddelavenkatagopichand:cmn8A75aZEJZTZ1R@cluster0.l5zctog.mongodb.net/venkat
-PORT = 5004
+MONGO_URI = mongodb://127.0.0.1:27017/19THJULY2025
+PORT = 6004
